==> MiSTle-Dev/FPGA-Companion/src/bl616/sdc_direct.c <==
#include "stdlib.h"
#include "bflb_spi.h"
#include <FreeRTOS.h>
#include <timers.h>
#include <string.h>
#include "bflb_gpio.h"
#include "board.h"
#include "ff.h"
#include "fatfs_diskio_register.h"
#include "sdc_direct.h"
#include "../debug.h"
#include "../mcu_hw.h"
#include "../jtag.h"
#include <sys/stat.h>
#define USB_NOCACHE_RAM_SECTION __attribute__((section(".noncacheable")))
#define BLOCK_SIZE (8*1024)

bool sdc_direct_init(void) {  
  gpio = bflb_device_get_by_name("gpio");

#ifdef TANG_CONSOLE60K
  /* Console 60k/138k SD Card bus to BL616 TF_SDIO_SEL*/
  bflb_gpio_set(gpio, PIN_TF_SDIO_SEL);
#endif
bflb_mtimer_delay_ms(250);

  board_sdh_gpio_init();

  fatfs_sdh_driver_register();
  sdc_direct_active = true;

  return true;
}

void sdc_direct_release(void) {

  gpio = bflb_device_get_by_name("gpio");
  sdc_direct_active = false;
#ifdef TANG_CONSOLE60K
  /* Console 60k/138k SD Card bus back to FPGA TF_SDIO_SEL*/
  bflb_gpio_reset(gpio, PIN_TF_SDIO_SEL);
#endif
}

void sdc_boot(void) {
  // before doing anything, check if an SD card is inserted
  // the FPGA is not ready, but it may still drive the SD card.
  // So reconfigure the FPGA without allowing it to boot from flash
  FRESULT res = FR_NOT_READY;
  uint64_t start;
  bool upload_ok = false;

#if defined(TANG_CONSOLE60K) || defined(TANG_MEGA60K)
    // try to boot the FPGA from SD card
    sdc_debugf("Attempting direct SD card boot ...");
    sdc_direct_init();
    start = bflb_mtimer_get_time_ms();
    sdc_debugf("Mounting sd card ...\r\n");
    while ((res = f_mount(&fs, "/sd", 1)) != FR_OK && bflb_mtimer_get_time_ms() - start < 500)
      bflb_mtimer_delay_ms(100);
    if (res == FR_OK) {
        sdc_debugf("SD card mounted in %d ms", bflb_mtimer_get_time_ms() - start);
        upload_ok = sdc_direct_upload_core_bin("/sd/core.bin");
        if(!upload_ok) upload_ok = sdc_direct_upload_core_fs("/sd/core.fs");
        f_mount(NULL, "/sd", 1);
      } else {
        sdc_debugf("SD card not found...\r\n");
    }
    sdc_direct_release();
#endif

  if(!upload_ok) {
    sdc_debugf("Mounting USB drive...");
    start = bflb_mtimer_get_time_ms();
    while ((res = f_mount(&fs, "/usb", 1)) != FR_OK && bflb_mtimer_get_time_ms() - start < 1000)
      bflb_mtimer_delay_ms(100);
    if (res != FR_OK) {
        sdc_debugf("Failed to mount USB drive\r\n");
    } else {
        sdc_debugf("USB drive mounted in %d ms", bflb_mtimer_get_time_ms() - start);
        // try to load core.bin and if that doesn't work core.fs
        if(!upload_ok) upload_ok = sdc_direct_upload_core_bin("/usb/core.bin");
        if(!upload_ok) upload_ok = sdc_direct_upload_core_fs("/usb/core.fs");
        f_mount(NULL, "/usb", 1);
      }
  }
  // on upload failure reconfig the FPGA and allow it to (re-)boot from flash
  if(!upload_ok) {
    sdc_debugf("Upload failed");
    jtag_gowin_fpgaReset();
  } else {
    sdc_debugf("Upload successful, FPGA now running new core");
  }
}
