==> MiSTle-Dev/FPGA-Companion/src/rp2040/sdc_direct.c <==
#include "pico/stdlib.h"
#include "hardware/spi.h"
#include <FreeRTOS.h>
#include <timers.h>
#include <string.h>
#include "sdc_direct.h"
#include "../debug.h"
#include "../mcu_hw.h"
#include "../jtag.h"
#define SD_BITBANG
#define PIN_SD_DET      7   // pin 9, gpio 7 (not at FPGA)
#define PIN_SD_CLK     10   // pin 13, gpio 10
#define PIN_SD_CMD     11   // pin 14, gpio 11
#define PIN_SD_DAT0     8   // pin 11, gpio 8
#define PIN_SD_DAT3     9   // pin 12, gpio 9, actually unsed
#define PIN_SD_nCS      9   // pin 12, gpio 9
#define PIN_SPI_SCK    10   // pin 13, gpio 10
#define PIN_SPI_DI     11   // pin 14, gpio 11
#define PIN_SPI_DO      8   // pin 11, gpio 8

bool sdc_direct_init(void) {  
#ifndef SD_BITBANG
  sdc_debugf("=== Direct SD card via HW SPI ===");
  sdc_debugf("  DET = %2d", PIN_SD_DET);
  sdc_debugf("  nCS = %2d", PIN_SD_nCS);
  sdc_debugf("  SCK = %2d", PIN_SPI_SCK);
  sdc_debugf("  DI  = %2d", PIN_SPI_DI);
  sdc_debugf("  DO  = %2d", PIN_SPI_DO);
#else  
  sdc_debugf("=== Direct SD card via SW SD 1-bit ===");
  sdc_debugf("  DET  = %2d", PIN_SD_DET);
  sdc_debugf("  SCK  = %2d", PIN_SD_CLK);
  sdc_debugf("  CMD  = %2d", PIN_SD_CMD);
  sdc_debugf("  DAT0 = %2d", PIN_SD_DAT0);
  sdc_debugf("  DAT1 = na");
  sdc_debugf("  DAT2 = na");
  sdc_debugf("  DAT3 = %2d", PIN_SD_DAT3);
#endif  
  
  // -------- init SD control pins ---------
  gpio_init(PIN_SD_DET);
  gpio_set_dir(PIN_SD_DET, GPIO_IN);
  if(gpio_get(PIN_SD_DET)) {
    sdc_debugf("No card inserted");
    return false;
  }
  
#ifndef SD_BITBANG
  // init spi1 at 100kHz, mode 0
  spi_init(spi1, 100000);
  spi_set_format(spi1, 8, SPI_CPOL_0, SPI_CPHA_0, SPI_MSB_FIRST);

  gpio_set_function(PIN_SPI_DO, GPIO_FUNC_SPI);
  gpio_set_function(PIN_SPI_SCK, GPIO_FUNC_SPI);
  gpio_set_function(PIN_SPI_DI, GPIO_FUNC_SPI);
#else  
  // we should only drive these signals if we can be sure that the FPGA does
  // not drive them
  gpio_init(PIN_SD_CLK); gpio_put(PIN_SD_CLK, 1);
  gpio_set_dir(PIN_SD_CLK, GPIO_OUT);

  // in SD mode the DI pin acts as CMD
  gpio_init(PIN_SD_CMD); gpio_put(PIN_SD_CMD, 1);
  gpio_set_dir(PIN_SD_CMD, GPIO_OUT);

  // in SD mode the DO pin acts as DAT0
  gpio_init(PIN_SD_DAT0);
  gpio_set_dir(PIN_SD_DAT0, GPIO_IN);
#endif
  
  // hw is setup, card is inserted. Try to set the card up.  
#ifdef SD_BITBANG
  uint32_t r=0;

  // start clocking
  sdc_direct_sd_cmd(64000, 0, 0x00000000, 0);   // go idle
  r = sdc_direct_sd_cmd(512, 8, 0x000001aa, 48);  // interface condition command
  if(r != 0x1aa) {
    sdc_debugf("interface condition failed");
    return false;
  }
  
  // wait for sd card to become ready
  do {
    sdc_direct_sd_cmd(512, 55, 0x00000000, 48);      // prepare ACMD
    r = sdc_direct_sd_cmd(256, 41, 0x40100000, 48);  // read OCR
  } while(!(r & 0x80000000));    // check busy bit
  
  // we only support sdhc cards
  if(!(r & 0x40000000)) {
    sdc_debugf("Not a SDHCv2 card");
    return false;
  }

  sdc_direct_sd_cmd(256, 2, 0x00000000, 136);        // read CID
  r = sdc_direct_sd_cmd(256, 3, 0x00000000, 48);     // get rca
  sdc_debugf("RCA = %04lx", r>>16);
  sdc_direct_sd_cmd(256, 9, r, 136);      // get CSD
  sdc_direct_sd_cmd(256, 7, r, 48);       // select card 
  sdc_direct_sd_cmd(512, 55, r, 48);      // prepare ACMD
  sdc_direct_sd_cmd(256, 16, 512, 48);    // select block len 512

  sdc_direct_active = true;
  return true;
#else
  gpio_init(PIN_SD_nCS); gpio_put(PIN_SD_nCS, 1);
  gpio_set_dir(PIN_SD_nCS, GPIO_OUT);

  // send 80 clocks
  for(int i=0;i<10;i++) sdc_direct_spi_transfer(0xff);

  // try a few times to reset the card
  uint8_t retries;
  for(retries=0; retries<16; retries++) {
    vTaskDelay(pdMS_TO_TICKS(1));
    if(sdc_direct_send_cmd(0, 0, NULL, 0) == 0x01) break;
  }

  if(retries < 16) {
    uint8_t ocr[4];
    if(sdc_direct_send_cmd(8, 0x1AA, ocr, sizeof(ocr)) == 1) {
      if(ocr[2] == 0x01 && ocr[3] == 0xAA) {
	// the card can work at 2.7-3.6V
	sdc_debugf("SD/SDHC card detected");
	// now we must wait until CMD41 returns 0 (or timeout elapses)
	TickType_t timeout = xTaskGetTickCount();
	while((xTaskGetTickCount() - timeout) < pdMS_TO_TICKS(2000)) {	
	  if (sdc_direct_send_cmd(55, 0, NULL, 0) == 0x01) {
	    // CMD55 must precede any ACMD command
	    if (sdc_direct_send_cmd(41, 1 << 30, NULL, 0) == 0x00) { // ACMD41 with HCS bit
	      // initialization completed
	      if (sdc_direct_send_cmd(58, 0, ocr, sizeof(ocr)) == 0x00) {
		// check CCS (Card Capacity Status) bit in the OCR
		// if CCS set then the card is SDHC compatible
		if(ocr[0] & 0x40) {
		  sdc_debugf("SDHC card initialized");
		  // increase SPI speed to 25MHz
		  spi_set_baudrate(spi1, 25000000);
		  sdc_direct_active = true;
		  return true;
		}
		sdc_debugf("Regular SD card not supported");
	      } else
		sdc_debugf("cmd58 failed");
	    } else
	      sdc_debugf("cmd41 failed");
	  } else
	    sdc_debugf("cmd55 failed");
	}
	sdc_debugf("Card initialization timed out!");
      }
    } else
      sdc_debugf("MMC card not supported");
  } else
    sdc_debugf("Unable to reset card");

#endif

  return false;
}

void sdc_direct_release(void) {
  sdc_direct_active = false;
  
  // No need to deinit the SD detection pin as that is not connected
  // to the FPGA at all.
  
#ifndef SD_BITBANG
  // from Part1PhysicalLayerSimplifiedSpecification page 287:
  // The only way to return to the SD mode is by entering the power cycle.
  // TODO: Wire pin20 of the MCU to the SD cards power input.
    
  sdc_debugf("De-initialize HW SPI");
  gpio_deinit(PIN_SD_nCS);
  spi_deinit(spi1);
  gpio_set_function(PIN_SPI_SCK, GPIO_FUNC_NULL);
  gpio_set_function(PIN_SPI_DI, GPIO_FUNC_NULL);
  gpio_set_function(PIN_SPI_DO, GPIO_FUNC_NULL);

#warning "================================================="  
#warning "SPI needs the ability to power cycle the SD card!"  
#warning "The FPGA will not be able to use the SD card!!!!!"  
#warning "================================================="  
#else  
  sdc_debugf("De-initialize SW SD 1-bit");
  gpio_deinit(PIN_SD_CLK);
  gpio_deinit(PIN_SD_CMD);
  gpio_deinit(PIN_SD_DAT0);
#endif
}

void sdc_boot(void) {
  // before doing anything, check if an SD card is inserted
  
  // -------- init SD control pins ---------
  gpio_init(PIN_SD_DET);
  gpio_set_dir(PIN_SD_DET, GPIO_IN);
  if(gpio_get(PIN_SD_DET)) {
    sdc_debugf("No card inserted");
    return;
  }
  
  // the FPGA is not ready, but it may still drive the SD card.
  // So reconfigure the FPGA without allowing it to boot from flash
  mcu_hw_fpga_reconfig(false);  // TODO: reenable this
  
  // try to boot the FPGA from SD card
  sdc_debugf("Attempting direct SD card boot ...");
  
  if(!sdc_direct_init()) {
    sdc_debugf("No usable card found. Stopping boot attempt");
    sdc_direct_release();
    mcu_hw_fpga_reconfig(true);
    return;
  }

  if(f_mount(&fs, "/sd", 1) != FR_OK) {
    sdc_debugf("direct mount failed");
    sdc_direct_release();
    mcu_hw_fpga_reconfig(true);
    return;
  }
  
  sdc_debugf("Card mounted directly");
  // we can now try to load a core from SD card

  // try to load core.bin and if that doesn't work core.fs
  bool upload_ok = sdc_direct_upload_core_bin("core.bin");
  if(!upload_ok) upload_ok = sdc_direct_upload_core_fs("core.fs");  
    
  // unmount the fs
  f_unmount("/sd");
  
  // release the sd card
  sdc_direct_release();
  
  // on upload failure reconfig the FPGA and allow it to (re-)boot from flash
  if(!upload_ok) {
    sdc_debugf("Upload failed, triggering FPGA reconfig from flash");
    mcu_hw_fpga_reconfig(true);
  }
}
